--- a/packages/docs/themes/cerebral-website/hero/__logo/hero__logo.css
+++ b/packages/docs/themes/cerebral-website/hero/__logo/hero__logo.css
@@ -5,7 +5,7 @@
 }
 
 @media (max-width: 600px) { 
-  .hero__logo img {
+  .hero__logo {
     height: 200px;
   }
 }
